@@ -1,3 +1,13 @@
+r62 - june, 2, 2009
+    * settings.yml : secure_module and secure_action have been customized to
+      redirect user to a custom page if he doesn't have required credentials
+    * Membre : action > processForm > we give all the credentials to the first
+      user
+    * web/js/domtab/domtab.js : new file, Domtab library to generate HTML tabs
+    * web/css/domtab.css : associated stylesheet
+    * Membre : action > edit action directly embeds AclForm
+    
+
 r61 - june, 2, 2009
     * AclCredentialPeer : doSelectForMembreId() method
     * Membre.php : resetAcl() method and addCredential($code) method
